feat: upgrade propagation analysis to TF-IDF/NLP service + event detail page + fixes
- Python: add TF-IDF propagation service with node classification, chain
  inference, and key node identification (3 new files)
- Java: integrate Python propagation analysis with LLM + rule fallback
- Java: add fullReport() endpoint aggregating 8 analysis dimensions
- Java: add crawler source update endpoint (PUT)
- Vue: add event detail page with 4 ECharts charts, AI summary, and
  intelligent Q&A panel
- Vue: upgrade propagation graph to ECharts force-directed layout with
  node type colors, key node markers, and edge similarity weighting
- Vue: add search page, sentiment column, sort toggle, dashboard hot
  events, word cloud, trend markPoints, high-frequency keywords
- Fix: MainLayout sidebar activeMenu for parameterized routes

Co-Authored-By: deepseek-v4-pro <deepseek-ai@claude-code-best.win>